# rsc-tools

./: .gitignore  Cargo.toml  endorsers.py  endorsers.txt  go.mod  go.sum  readme.md  requirements.txt  tarters.txt  violators.py  violators.txt
endorsers/: main.go
nopers/: main.go
scripts/: endorsers.txt  nopers.txt  tarters.txt  violators.txt
tarters/: main.go
violators/: main.go
