[package]
name = "rsc-tools"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = "0.3.26"
reqwest = { version = "0.11.14", features = ["blocking"] }
serde = {version = "1.0.152", features = ["derive"]}
serde-xml-rs = "0.6.0"
tokio = { version = "1.25.0", features = ["full"] }
thiserror = "1.0.40"
